formatting to english language

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Rocketseat landing page challenge" />
+    <meta name="description" content="Digital market for crypto collectibles and non-fungible tokens (NFT). Buy, sell and discover exclusive digital assets for you." />
 
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
 
-    <title>Rocket NFTs &mdash; Descubra a verdadeira arte digital</title>
+    <title>Rocket NFTs &mdash; Discover the real digital art</title>
   </head>
   <body>
     <main class="main-background">
@@ -30,8 +30,8 @@
         </div>
         <div>
           <ul class="navigation-links">
-            <li><a class="navigation-link" href="#">Comprar NFT</a></li>
-            <li><a class="navigation-link" href="#">Sobre</a></li>
+            <li><a class="navigation-link" href="#">Buy NFT</a></li>
+            <li><a class="navigation-link" href="#">About</a></li>
             <li><a class="navigation-link" href="#">FAQ</a></li>
           </ul>
         </div>
@@ -42,16 +42,14 @@
               alt="Fox logo"
               src="/assets/logo_MetaMask.svg"
             />
-            <span>Conectar carteira</span>
+            <span>Connect Wallet</span>
           </button>
         </div>
       </header>
       <section class="main">
         <div class="description">
           <p class="description-text">
-            Mercado digital para colecionáveis em criptos e tokens não fungível
-            (NFT).<br />Compre, venda e descubra ativos digitais exclusivos para
-            você.
+            Digital market for crypto collectibles and non-fungible tokens (NFT).<br />Buy, sell and discover exclusive digital assets for you.
           </p>
           <p class="description-text"></p>
           <div class="selected-artists">
@@ -66,8 +64,7 @@
         </div>
         <div class="heading">
           <h1 class="heading-text">
-            Descubra a verdadeira arte digital e<br />
-            colecione diversas
+            Discover the real digital art and collect exclusive and coutless
             <span class="colored-text bold">NFTs</span>
           </h1>
         </div>
@@ -126,15 +123,15 @@
         <div class="lateral-column-container">
           <div>
             <h3 class="lateral-column-num">10K+</h3>
-            <p class="lateral-column-text">Artes</p>
+            <p class="lateral-column-text">Arts</p>
           </div>
           <div>
             <h3 class="lateral-column-num">200+</h3>
-            <p class="lateral-column-text">Vendas</p>
+            <p class="lateral-column-text">Sells</p>
           </div>
           <div>
             <h3 class="lateral-column-num">20</h3>
-            <p class="lateral-column-text">Artistas</p>
+            <p class="lateral-column-text">Artists</p>
           </div>
         </div>
       </div>
@@ -165,12 +162,12 @@
       </div>
     </section>
     <section class="third-background">
-      <div class="populares-da-semana">
-        <h2><span class="colored-text">Populares</span> da semana</h2>
-        <div class="populares-grid">
+      <div class="popular">
+        <h2><span class="colored-text">Popular</span> this week</h2>
+        <div class="popular-grid">
           <div class="astronaut-container">
             <div class="astronaut-first-line">
-              <h3>Astronauta 1</h3>
+              <h3>Astronaut 1</h3>
               <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
@@ -184,7 +181,7 @@
 
           <div class="astronaut-container astronaut-end">
             <div class="astronaut-first-line">
-              <h3>Astronauta 2</h3>
+              <h3>Astronaut 2</h3>
               <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
@@ -198,7 +195,7 @@
 
           <div class="astronaut-container">
             <div class="astronaut-first-line">
-              <h3>Astronauta 3</h3>
+              <h3>Astronaut 3</h3>
               <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
@@ -212,7 +209,7 @@
 
           <div class="astronaut-container astronaut-end">
             <div class="astronaut-first-line">
-              <h3>Astronauta 4</h3>
+              <h3>Astronaut 4</h3>
               <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
@@ -225,8 +222,8 @@
           </div>
         </div>
       </div>
-      <div class="melhores-artistas">
-        <h2>Melhores <span class="colored-text bold">artistas</span></h2>
+      <div class="best-artists">
+        <h2>Best <span class="colored-text bold">artists</span></h2>
 
         <div class="artists-grid">
           <div class="artist-container">
@@ -235,7 +232,7 @@
             </div>
             <div class="artist-text">
               <p>Mayk Brito</p>
-              <span class="colored-text">80 Fotografias</span>
+              <span class="colored-text">80 Photos</span>
             </div>
           </div>
 
@@ -245,7 +242,7 @@
             </div>
             <div class="artist-text">
               <p>Jakeliny G.</p>
-              <span class="colored-text">99 Fotografias</span>
+              <span class="colored-text">99 Photos</span>
             </div>
           </div>
 
@@ -255,7 +252,7 @@
             </div>
             <div class="artist-text">
               <p>João I. (Biro)</p>
-              <span class="colored-text">50 Fotografias</span>
+              <span class="colored-text">50 Photos</span>
             </div>
           </div>
 
@@ -265,7 +262,7 @@
             </div>
             <div class="artist-text">
               <p>Tamires Santos</p>
-              <span class="colored-text">43 Fotografias</span>
+              <span class="colored-text">43 Photos</span>
             </div>
           </div>
 
@@ -275,7 +272,7 @@
             </div>
             <div class="artist-text">
               <p>Ana Silva</p>
-              <span class="colored-text">28 Fotografias</span>
+              <span class="colored-text">28 Photos</span>
             </div>
           </div>
 
@@ -285,13 +282,13 @@
             </div>
             <div class="artist-text">
               <p>Diego F.</p>
-              <span class="colored-text">20 Fotografias</span>
+              <span class="colored-text">20 Photos</span>
             </div>
           </div>
         </div>
-        <div class="ver-todos-os-artistas">
+        <div class="see-all-artists">
           <a href="#"
-            >Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+            >See all artists&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
               src="/assets/arrow-orange.svg"
           /></a>
         </div>
@@ -313,37 +310,37 @@
       <div class="footer-newsletter">
         <div class="footer-newsletter-box">
           <p>
-            Fique por dentro de<br /><span class="colored-text"
-              >todas as novidades</span
+            Sign the newsletter<br /><span class="colored-text"
+              >to stay updated</span
             >
           </p>
           <form>
             <input type="email" placeholder="nft@rocketseat.com.br" />
-            <input type="submit" value="Enviar" />
+            <input type="submit" value="Send" />
           </form>
         </div>
       </div>
       <div class="footer-map">
         <div class="footer-column">
-          <a href="#">Empresa</a>
-          <a href="#">Sobre</a>
-          <a href="#">Serviços</a>
-          <a href="#">Time</a>
-          <a href="#">Carreira</a>
+          <a href="#">Company</a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Team</a>
+          <a href="#">Carrer</a>
         </div>
         <div class="footer-column">
-          <a href="#">Mapa</a>
-          <a href="#">Galeria</a>
-          <a href="#">Populares</a>
-          <a href="#">Vendas</a>
-          <a href="#">Contato</a>
+          <a href="#">Map</a>
+          <a href="#">Gallery</a>
+          <a href="#">Popular</a>
+          <a href="#">Sells</a>
+          <a href="#">Contact</a>
         </div>
         <div class="footer-column">
           <a href="#">Links</a>
           <a href="#">FAQs</a>
-          <a href="#">Termos</a>
-          <a href="#">Política</a>
-          <a href="#">Ajuda</a>
+          <a href="#">Terms</a>
+          <a href="#">Policy</a>
+          <a href="#">Help</a>
         </div>
       </div>
     </footer>
