implementing media queries and responsive layout 896px

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Digital market for crypto collectibles and non-fungible tokens (NFT). Buy, sell and discover exclusive digital assets for you." />
+    <meta
+      name="description"
+      content="Digital market for crypto collectibles and non-fungible tokens (NFT). Buy, sell and discover exclusive digital assets for you."
+    />
 
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +19,8 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="queries.css" />
+    
     <script defer src="script.js"></script>
 
     <title>Rocket NFTs &mdash; Discover the real digital art</title>
@@ -49,7 +54,8 @@
       <section class="main">
         <div class="description">
           <p class="description-text">
-            Digital market for crypto collectibles and non-fungible tokens (NFT).<br />Buy, sell and discover exclusive digital assets for you.
+            Digital market for crypto collectibles and non-fungible tokens
+            (NFT).<br />Buy, sell and discover exclusive digital assets for you.
           </p>
           <p class="description-text"></p>
           <div class="selected-artists">
@@ -68,8 +74,8 @@
             <span class="colored-text bold">NFTs</span>
           </h1>
         </div>
-        <div>
-          <img
+        <div class="badge">
+          <img 
             alt="Badge with message written on border"
             src="/assets/badge.svg"
           />
@@ -140,7 +146,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
           culpa doloribus
           <span class="colored-underline">similique nisi eum</span> voluptatum
-          minima porro repudiandae dolorem blanditiis asperiores minus tempore
+          minima porro repudiandae
         </p>
         <p class="testimonials-author">Lorem ipsum</p>
       </div>
@@ -149,7 +155,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
           culpa doloribus
           <span class="colored-underline">similique nisi eum</span> voluptatum
-          minima porro repudiandae dolorem blanditiis asperiores minus tempore
+          minima porro repudiandae
         </p>
         <p class="testimonials-author">Lorem ipsum</p>
       </div>
@@ -225,7 +231,7 @@
       <div class="best-artists">
         <h2>Best <span class="colored-text bold">artists</span></h2>
 
-        <div class="artists-grid">
+        <div class="artists-grid grid-3-columns">
           <div class="artist-container">
             <div class="artist-image">
               <img alt="Artist profile picture" src="/assets/artista-1.png" />
@@ -251,7 +257,7 @@
               <img alt="Artist profile picture" src="/assets/artista-3.png" />
             </div>
             <div class="artist-text">
-              <p>João I. (Biro)</p>
+              <p>João I.</p>
               <span class="colored-text">50 Photos</span>
             </div>
           </div>
@@ -261,7 +267,7 @@
               <img alt="Artist profile picture" src="/assets/artista-4.png" />
             </div>
             <div class="artist-text">
-              <p>Tamires Santos</p>
+              <p>Tamires S.</p>
               <span class="colored-text">43 Photos</span>
             </div>
           </div>
